Details
-
Bug
-
Resolution: Fixed
-
Major
-
0.4.16-dev-435-g03ee075 https://github.com/reactos/reactos/commit/03ee0756b872a8a487876a97e5152fffbd524c73
Description
reactos-livecd-0.4.16-dev-434-g1dfba2a-x86-gcc-lin-dbg
reactos-livecd-0.4.16-dev-435-g03ee075-x86-gcc-lin-dbg
REGRESSION, guilty commit: https://github.com/reactos/reactos/commit/03ee0756b872a8a487876a97e5152fffbd524c73 by whindsaks attempting to solve CORE-19933 (addendum to https://github.com/reactos/reactos/commit/afc130ff3f5b089c0270686d1b76b3cb08133e38 )
- Open My Computer
- Select a drive and a special folder, eg : "D:\ CDRom drive" AND "NT Object Space"
Same would apply if 2 drives are selected such as C:\ HDD and D:\ CDRom.- Log says: "err:(dll/win32/shell32/folders/CDrivesFolder.cpp:867) Got unknown pidl type!"
- Right click (context menu)
- Click on"Properties"

Crash and log shows :

Unhandled exception
|
ExceptionCode: c0000005
|
Faulting Address: 0206F4BC
|
CS:EIP 1b:7afef173
|
DS 23 ES 23 FS 3b GS 0 |
EAX: 0000f574 EBX: 00000000 ECX: 0206f4bc |
EDX: 0000f574 EBP: 0205fda4 ESI: 0205ff48 ESP: 0205fd7c
|
EDI: 0205fed4 EFLAGS: 00010202 |
Address:
|
<shell32.dll:df173> (C:\ReactOS\system32\shell32.dll@7af10000) |
Frames:
|
<shell32.dll:dcd68> (C:\ReactOS\system32\shell32.dll@7af10000) |
<shell32.dll:20b1f> (C:\ReactOS\system32\shell32.dll@7af10000) |
<shell32.dll:21787> (C:\ReactOS\system32\shell32.dll@7af10000) |
<shell32.dll:218ba> (C:\ReactOS\system32\shell32.dll@7af10000) |
<shell32.dll:8df92> (C:\ReactOS\system32\shell32.dll@7af10000) |
<shell32.dll:107da1> (C:\ReactOS\system32\shell32.dll@7af10000) |
<shlwapi.dll:241ee> (C:\ReactOS\system32\shlwapi.dll@7c0d0000) |
<kernel32.dll:1ca74> (C:\ReactOS\system32\kernel32.dll@7c5e0000) |
Attachments
Issue Links
- blocks
-
CORE-19933 REGRESSION: Task Manager fails to show properties
-
- Resolved
-