[SHELL32] Multiple drives property sheet support

- Supports multiple drives in a single property sheet
- Fixes crash in SHELL_CloneDataObject when the HIDA contains multiple PIDLs [CORE-20025]

CORE-20025